# mini-codex

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.lock.txt  setup.py
.github/workflows/: ci.yml
docs/: README.md  architecture.md  usage.md
examples/: README.md  calculator.py  guess_game.py
src/mini_codex/: __init__.py  agent.py  cli.py  config.py  console.py  env.py  providers.py  tools.py
tests/: test_agent.py  test_cli.py  test_console.py  test_main.py  test_tools.py
