[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-codex"
dynamic = ["version"]
description = "A terminal coding assistant with workspace-scoped file tools and multi-provider support."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7,<5",
  "ruff>=0.12,<1",
]

[project.scripts]
mini-codex = "mini_codex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mini_codex.version.VERSION"}

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["I001"]
